<resources>
    <string name="app_name">Pantín</string>
    <string name="splas_himg_backgroud">Splash Background</string>
    <string name="usuario">Usuario</string>
    <string name="seccion_1">Home</string>
    <string name="seccion_2">Chat</string>
    <string name="seccion_3">Payments</string>
    <string name="seccion_4">Gallery</string>
    <string name="chat_seccion_1">Save Images</string>
    <string name="menu_calculator_seccion_1">Add Payment</string>
    <string name="otras_opciones">Otras opciones</string>
    <string name="opcion_1">Opcion 1</string>
    <string name="opcion_sing_out">Close session</string>
    <string name="sign_in">Sign In</string>
    <string name="pantin_classic_2017">Pantin Classic 2017</string>

    <string name="email">Email</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>

    <string name="refrence_chat_photos">chat_photos</string>
    <string name="refrence_gallery_photos">gallery_photos</string>
    <string name="USERS">users</string>
    <string name="reference_payments">payments</string>
    <string name="reference_gallery_database">gallery_photos</string>

    <string name="preference_user_name">name</string>
    <string name="preference_user_photoUrl">photoUrl</string>
    <string name="preference_user_uid">uid</string>
    <string name="preference_user_paymentsSum">paymentsSum</string>
    <string name="preference_store_image_gallery">store_image_gallery</string>
    <string name="preference_store_image_chat">store_image_chat</string>


    <string name="sp_store_chat_images">store_chat_images</string>
    <string name="progress_downloading">Downloading…</string>
    <string name="progress_uploading">Uploading…</string>

    <string name="upload_success">Upload finished</string>
    <string name="upload_failure">Upload failed</string>\

    <string name="download_success">Download finished</string>
    <string name="download_failure">Download failure</string>
    <string name="firebase_storage_directory_chat">PantinClassic/PantinChat/</string>
    <string name="firebase_user_id">firebase_user_id</string>
    <string name="firebase_user_display_name">display_name</string>
    <string name="select_picture_title">Complete action using</string>
    <string name="user_photo_extension">userphoto.PNG</string>
    <string name="image_chat_transition">image_chat_transition</string>
    <string name="add_payment">Add Payment</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="receipt">Add Receipt</string>
    <string name="from_gallery">From Gallery</string>
    <string name="from_camera">From Camera</string>
    <string name="file_name">File Name</string>
    <string name="error_wrong_amount">You must provide a valid amount</string>
    <string name="payments_sum">paymentsSum</string>
    <string name="payment_success">Payment added</string>
    <string name="cancel">Cancel</string>
    <string name="opcion_profile">Profile</string>

    <plurals name="days">
        <item quantity="zero">%d Days</item>
        <item quantity="one">%d Day</item>
        <item quantity="other">%d Days</item>
    </plurals>
    <plurals name="hours">
        <item quantity="zero">%d Hours</item>
        <item quantity="one">%d Hour</item>
        <item quantity="other">%d Hours</item>
    </plurals>
    <plurals name="minutes">
        <item quantity="zero">%d Minutes</item>
        <item quantity="one">%d Minute</item>
        <item quantity="other">%d Minutes</item>
    </plurals>
    <plurals name="seconds">
        <item quantity="zero">%d Seconds</item>
        <item quantity="one">%d Second</item>
        <item quantity="other">%d Seconds</item>
    </plurals>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

    <string name="small_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="subtitle_mup">Here I am with a subtitle</string>
    <string name="not_found_user_name">Other pavo random</string>
    <string name="title">Title</string>
    <string name="error_wrong_title">You must provide a Title</string>

    <string name="coming_soon">Settings coming soon! :)\n\n

    For now, you can try to change your user profile photo</string>
    <string name="title_activity_file_manager">Pantín Classic</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="settings_storage">Storage</string>
    <string name="settings_save_gallery_images">Save Gallery Images</string>
    <string name="settings_save_chat_images">Save Chat Images</string>
    <string name="img_description">img_description</string>
    <string name="img_original_description">original_description</string>
    <string name="uploading_files">Uploading files</string>
    <string name="change_layout_manager">Display</string>
    <string name="my_payments">My Payments</string>

</resources>
