<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_seccion_1"
            android:icon="@drawable/vd_menu"
            android:title="@string/seccion_1"/>
        <item
            android:id="@+id/menu_seccion_2"
            android:icon="@drawable/vd_chat_bubble"
            android:title="@string/seccion_2"/>
        <item
            android:id="@+id/menu_seccion_3"
            android:icon="@drawable/vd_sentiment_very_dissatisfied"
            android:title="@string/seccion_3"/>
        <item
            android:id="@+id/menu_seccion_4"
            android:icon="@drawable/vd_image_gallery"
            android:title="@string/seccion_4"/>
    </group>

    <item
        android:id="@+id/navigation_subheader"
        android:title="@string/otras_opciones">
        <menu>
            <item
                android:id="@+id/menu_opcion_2"
                android:icon="@drawable/vd_sign_out"
                android:title="@string/opcion_sing_out"/>
        </menu>
    </item>
</menu>