<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".views.splash.SplashActivity">

    <!-- Background-->


    <ImageView
        android:id="@+id/splash_img_backgroud"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/splas_himg_backgroud"
        android:scaleType="centerCrop"
        android:src="@drawable/drw_pantin1"
        android:visibility="gone" />

    <com.example.mgalante.mysummerapp.views.ParticlesView
        android:id="@+id/my_particles_demo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:dotColor="@color/colorAccent"
        app:frameDelayMillis="10"
        app:lineColor="@color/colorWhite"
        app:lineDistance="86dp"
        app:lineThickness="1dp"
        app:maxDotRadius="3dp"
        app:minDotRadius="1dp"
        app:numDots="100"
        app:stepMultiplier="1" />

    <!--<View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_splash_background_transparent_dark" />-->

    <!-- Body -->

    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="62dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/pantin_classic_2017"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="36sp"
        android:typeface="sans" />

    <Button
        android:id="@+id/sign_in_button_splash"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="43dp"
        android:background="@color/colorAccent"
        android:text="@string/sign_in"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="#ffffff" />

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/password"
        android:layout_below="@+id/mainTitle"
        android:layout_marginTop="54dp"
        android:enabled="false"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:enabled="false"
        android:focusableInTouchMode="true"
        android:hint="@string/hint_password"
        android:imeActionId="@+id/login"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" />


</RelativeLayout>
